--- a/settings.conf
+++ b/settings.conf
@@ -22,4 +22,4 @@ zfs-linux-hardened-git
 zfs-auto-snapshot-git
 zfs-linux-hardened-git-headers)
 trustedpgpkeys=(24C4B33F66C7DCBBFDF8ABA0951754B8676D61EC)
-sign_key=24C4B33F66C7DCBBFDF8ABA0951754B8676D61EC
+sign_key=(24C4B33F66C7DCBBFDF8ABA0951754B8676D61EC)
