--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,4 @@
-packages=(
-archiso-git
+packages=(archiso-git
 dkms-sorted
 ruby-backports
 ruby-ethon
@@ -21,8 +20,7 @@ zfs-utils-common-git
 zfs-linux-hardened-git
 zfs-auto-snapshot-git
 zfs-linux-hardened-git-headers)
-trustedpgpkeys=(
-24C4B33F66C7DCBBFDF8ABA0951754B8676D61EC
+trustedpgpkeys=(24C4B33F66C7DCBBFDF8ABA0951754B8676D61EC
 DDB867B92AA789C165EEFA799B729B06A680C281
 684148BB25B49E986A4944C55184252D824B18E8
 91FFE0700E80619CEB73235CA88E23E377514E00
