keyserver cannot assign requested address - reduce

--- a/makepkg.conf
+++ b/makepkg.conf
@@ -119,9 +119,9 @@ PKGDEST=/home/builder/aur-build/repo
 #-- Log files: specify a fixed directory where all log files will be placed
 #LOGDEST=/home/makepkglogs
 #-- Packager: name/email of the person or organization building packages
-#PACKAGER="John Doe <john@doe.com>"
+PACKAGER="Matthew J Harmon <gpg@mjh.email>"
 #-- Specify a key to use for package signing
-#GPGKEY=""
+GPGKEY="24C4B33F66C7DCBBFDF8ABA0951754B8676D61EC"
 
 #########################################################################
 # COMPRESSION DEFAULTS
