--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ branches:
 
 env:
   global:
-    - PUSH_BRANCH=deploy
+    - PUSH_BRANCH=gh-pages
     - DOCKER_TAG=aur-build
     - REPO_NAME=build
